feat: coupon에 isactive필드 추가